* Adaptation aux nouveaux etats  * Meilleure gestion des erreurs pour les RRD proxifiées
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@1313 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigimap/link.html
+++ b/src/vigilo/themes/templates/vigimap/link.html
@@ -2,5 +2,5 @@
   <p>${l_("Link between %(from_node)s and %(to_node)s") % {'from_node': from_node, 'to_node': to_node}}</p>
   <p>${l_("Reference service: %(service)s on %(host)s") % {'service': service, 'host': host}}</p>
   <p>${l_("Status: %(status)s") % {'status': status}}</p>
-  <p><img src="${img}" alt="${alt}" /></p>
+  <p py:if="img"><img src="${img}" alt="${alt}" /></p>
 </div>
