Déplacement du logo de Vigilo dans common (thèmes).
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@1371 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigigraph/index.html
+++ b/src/vigilo/themes/templates/vigigraph/index.html
@@ -18,7 +18,7 @@
           <tr>
               <td class="logo">
                   <a href="/">
-                      <img class="logo" src="${tg.url('/images/red15-logo-vigilo.png')}" alt="Vigilo"/>
+                      <img class="logo" src="${tg.url('/images/vigilo.png')}" alt="Vigilo"/>
                   </a> v2.0
               </td>
           </tr>
