--- a/src/vigilo/themes/templates/vigiboard/vigiboard_event_table.html
+++ b/src/vigilo/themes/templates/vigiboard/vigiboard_event_table.html
@@ -5,32 +5,39 @@
 
   <xi:include href="vigiboard_history_table.html" />
 
-<py:def function="event_table(events,page,pages,rows_info,edit_event_status_options,history,hist_error,search)">
+<py:def function="event_table(events,page,nb_pages,rows_info,edit_event_status_options,history,hist_error,search)">
 <?python from genshi import HTML ?>
+<?python from vigilo.models import StateName ?>
 
-<py:if test="len(events) > 1">
 <table class="vigitable" summary="Event table">
 	<thead>
 		<tr >
 			<td style="width:26px;border-right: solid 1px #4682b4">
-				<a py:if="page > pages[0]" href="${tg.url('/%d' % (page-1))}"><img src="${tg.url('/images/fleche_up.png')}" alt="Previous" title="Previous page"/></a>
-				<img py:if="page == pages[0]" src="${tg.url('/images/fleche_up.png')}" alt="Previous" title="Previous page" />
+			    <py:choose>
+				<img py:when="page == 1" src="${tg.url('/images/fleche_up.png')}" alt="Previous" title="Previous page" />
+				<a py:otherwise="" href="${tg.url('/%d' % (page-1))}"><img src="${tg.url('/images/fleche_up.png')}" alt="Previous" title="Previous page"/></a>
+				</py:choose>
 			</td>
 			<!--!
 				events[0] contient les champs affichés en permanence.
 				events[1][6] contient une liste des en-têtes générés par les plugins.
 				La somme est calculée de sorte que le bandeau de changement de pages
 				est aligné sur le reste du tableau (les alertes).
+- 1 + len(events[1][6])
 			-->
-    		<td colspan="${len(events[0]) - 1 + len(events[1][6])}" style="color: white;background-color: #4682b4" >${l_('Showing rows %(id_first_row)d to %(id_last_row)d of %(total_rows)d') % rows_info} <br />
-				Pages <py:for each="p in pages">
+    		<td colspan="${len(events[0])}" style="color: white;background-color: #4682b4" >${l_('Showing rows %(id_first_row)d to %(id_last_row)d of %(total_rows)d') % rows_info} <br />
+    		    <py:if test="nb_pages > 1">
+				Pages <py:for each="p in range(1, nb_pages + 1)">
 				<a py:if="p != page" href="${tg.url('/%d' % p)}" py:content="p" />
 				<span py:if="p == page" py:replace="p" />
 				</py:for>
+				</py:if>
 			</td>
 			<td style="width:26px;border-left: solid 1px #4682b4">
-				<a py:if="pages[-1] > page" href="${tg.url('/%d' % (page+1))}"><img src="${tg.url('/images/fleche_down.png')}" alt="Next" title="Next page"/></a>
-				<img py:if="page == pages[-1]" src="${tg.url('/images/fleche_down.png')}"  alt="Next" title="Next page" />
+			    <py:choose>
+				<img py:when="page == nb_pages" src="${tg.url('/images/fleche_down.png')}"  alt="Next" title="Next page" />
+				<a py:otherwise="" href="${tg.url('/%d' % (page+1))}"><img src="${tg.url('/images/fleche_down.png')}" alt="Next" title="Next page"/></a>
+				</py:choose>
 			</td>
 		</tr>
 
@@ -44,7 +51,7 @@
 	</thead>
 
 	<tbody>
-		<py:for each="(event,class_tr,class_td_severity,class_td_date,img_fleche,img_statu,plugin) in events[1:]">
+		<py:for each="(event,class_tr,class_td_severity,class_td_date,img_fleche,statu,plugin) in events[1:]">
 		<tr py:attrs="class_tr" py:with="cause=event.cause.first()">
 			<td style="padding: 3px;" py:attrs="class_td_severity">
 			    <a href="javascript:vigiboard_historydialog('${event.idcorrevent}')" class="HistoryLien"><img src="${tg.url(img_fleche['src'])}" style="width:20px" alt="Details" title="Event details" /></a>
@@ -65,9 +72,16 @@
 						'host': cause.supitem.host.name,
 						'service': cause.supitem.servicename,
 						'tt': event.trouble_ticket }}">[${event.trouble_ticket}]</a></td>
-			<td style="text-align: center"><img py:attrs="img_statu" py:if="img_statu != None" alt="Status" title="Event status"/></td>
-			<td py:attrs="class_td_date" style="padding: 0px;text-align: center"><a class="Edit_EventsLien" href="javascript:vigiboard_edit_eventdialog('${event.idcorrevent}')"><img src="${tg.url('/images/icon_page_edit.png')}" alt="Edit" title="Edit this event"/></a></td>
-			<td py:attrs="class_td_date" style="padding:0px;text-align: center"><input type="checkbox" class="Edit_EventsCheckBox" value="${event.idcorrevent}"/></td>
+			<py:choose>
+                <py:when test="not (event.status == 'AAClosed' and StateName.value_to_statename(cause.current_state) == u'OK')">
+			    <td style="text-align: center"><img src="${statu['src']}" py:if="statu != None" alt="${statu['label']}" title="${statu['label']}"/></td>
+			    <td py:attrs="class_td_date" style="padding: 0px;text-align: center"><a class="Edit_EventsLien" href="javascript:vigiboard_edit_eventdialog('${event.idcorrevent}')"><img src="${tg.url('/images/icon_page_edit.png')}" alt="Edit" title="Edit this event"/></a></td>
+			    <td py:attrs="class_td_date" style="padding:0px;text-align: center"><input type="checkbox" class="Edit_EventsCheckBox" value="${event.idcorrevent}"/></td>
+			    </py:when>
+			    <py:otherwise>
+			    <td colspan="3" style="text-align: center"><img py:attrs="statu" py:if="statu != None" alt="Status" title="Event status"/></td>
+			    </py:otherwise>
+            </py:choose>
 		</tr>
 
     		<py:if test="hist_error == True">
@@ -162,58 +176,6 @@ Peak State: <span id="HistoryDialog_peak_state" /><br />
 <div  style="display:none" id="SearchDialog">
 	${tmpl_context.search_form()}
 </div>
-
-</py:if>
-
-<py:if test="1 >= len(events)">
-<table class="vigitable">
-
-        <thead>
-                <tr>
-                        <td style="width:26px;background-color: rgb(70, 130, 180);">
-                                <img src="${tg.url('/images/fleche_up.png')}" alt="Previous" title="Previous page"/>
-                        </td>
-                        <td colspan="9" style="width:100%;background-color:#4682B4;color:white;text-align:center">
-                            Showing rows 0 to 0 of 0<br />Page 0
-                        </td>
-                        <td style="width:26px">
-                                <img src="${tg.url('/images/fleche_down.png')}" alt="Next" title="Next page" />
-                        </td>
-                </tr>
-
-                <tr style="background-color:#F8F8F8;font-weight: bold">
-			        <py:for each="(pname,pstyle) in events[0]">
-                        <td py:attrs="pstyle">${HTML(pname)}</td>
-                    </py:for>
-			            <td style="text-align: center;"><img src="${tg.url('/images/icon_page_edit.png')}" alt="Edit selected" title="Edit all selected events"/></td>
-                        <td style="text-align: center;"><input id="vigiboard_checkall_checkbox" type="checkbox" /></td>
-                </tr>
-        </thead>
-
-        <tbody>
-<tr><td colspan="9"><br />No event</td></tr>
-</tbody>
-</table>
-<div style="display:none" id="HistoryDialog" />
-<div style="display:none" id="Edit_EventsDialog" />
-${tmpl_context.searchdialog}
-<div  style="display:none" id="SearchDialog">
-        ${tmpl_context.search_form()}
-</div>
-<script type="text/javascript">
-function vigiboard_searchdialog() {
-                $('#search_form_host').attr('value','');
-                $('#search_form_service').attr('value','');
-                $('#search_form_output').attr('value','');
-                $('#search_form_trouble_ticket').attr('value', '');
-                $('#SearchDialog').dialog('open');
-        }
-$('#SearchLien').click(function(e){
-                $('#SearchDialog').dialog('option','position','center');
-        });
-</script>
-
-</py:if>
 
 </py:def>
 
