--- a/src/vigilo/themes/templates/vigigraph/index.html
+++ b/src/vigilo/themes/templates/vigigraph/index.html
@@ -4,6 +4,8 @@
       xmlns:py="http://genshi.edgewall.org/"
       xmlns:xi="http://www.w3.org/2001/XInclude">
 
+<xi:include href="sidebars.html" />
+<xi:include href="master.html" />
 
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
