--- a/src/vigilo/themes/templates/vigiboard/vigiboard_plugin/shn.html
+++ b/src/vigilo/themes/templates/vigiboard/vigiboard_plugin/shn.html
@@ -1,14 +1,21 @@
 <html xmlns:py="http://genshi.edgewall.org/"
       xmlns:xi="http://www.w3.org/2001/XInclude"
       py:strip="">
-      
 
-      <div id="SHNDialog">
-	      <ul id="SHNDialog_liste">
-		      <li>.</li>
-	      </ul>
-	</div> 
-
-	<script type="text/javascript" src="${tg.url('/javascript/vigiboard_plugin/shn.js')}" ></script>
+<script type="text/javascript" src="${tg.url('/javascript/vigiboard_plugin/shn.js')}"></script>
+<script type="text/javascript">
+    window.addEvent('domready', function () {
+        window.hls_dialog = new Jx.Dialog({
+            id: "hls_dialog",
+            label: "${l_('Impacted high-level services')}",
+            modal: false,
+            resize: false,
+            move: true,
+            content: '',
+            onOpen: window.dlg_open_handler,
+            onClose: window.dlg_close_handler,
+        });
+    });
+</script>
 
 </html>
