Corrections sur tg.url images
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@1417 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigimap/images.html
+++ b/src/vigilo/themes/templates/vigimap/images.html
@@ -12,8 +12,8 @@
 <div xmlns:py="http://genshi.edgewall.org/">
     <ul class="images">
         <li py:for="image in images">
-            <img src="${tg.url(images[image].absname)}" alt="" title="${images[image].filename}" onclick="set_image('${images[image].filename}');" />
-            <em>${images[image].filename}</em>
+            <img src="${tg.url('/images/%s/%s' % (folder,image))}" alt="" title="${image}" onclick="set_image('${image}');" />
+            <em>${image}</em>
         </li>
     </ul>
 </div>
